objects/Service_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Briefing_Theatre__c</fullName>
        <label>Briefing Theatre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBC_CBC_Location_c__c</fullName>
        <label>EBC/EC and Other/FSO Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Delivery_Type__c</fullName>
        <label>Meeting Delivery Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_FSO1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Site</label>
        <referenceTo>CEE_Location__c</referenceTo>
        <relationshipLabel>Service Charge</relationshipLabel>
        <relationshipName>Service_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Charge</label>
    <nameField>
        <displayFormat>CEEDIS-{000000}</displayFormat>
        <label>Service Charge  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Charge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>